Fri Oct  8 09:10:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.cpp:
        * ciao/Servants/Connector_Servant_Impl_Utils_T.cpp:
          Used _var to create a cookie.

        * tests/CIF/Navigation/client.cpp:
          Resolved compile issue.

Fri Oct  8 07:55:47 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Containers/Extension/Interceptor_Registration_T.cpp:
        * ciao/Servants/Servant_Impl_Utils_T.cpp:
          Using _var to create a cookie.

Fri Oct  8 07:47:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Resolved compile issues.

Thu Oct  7 12:50:38 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
        * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
        * tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc:
        * ChangeLog:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
        * tests/Bug_2130_Regression/interfaces/ENW.mpc:
        * examples/Hello/Hello_Base/Hello_Base.mpc:
        * examples/BasicSP/BMClosedED/BMClosedED.mpc:
        * examples/BasicSP/BasicSP.mpc:
        * examples/BasicSP/BMDisplay/BMDisplay.mpc:
        * examples/BasicSP/EC/EC.mpc:
        * examples/BasicSP/BMDevice/BMDevice.mpc:
        * examples/Display/Display_Base/Display_Base.mpc:
        * examples/DevGuideExamples/Messenger/Receiver.mpc:
        Add avoids_ccm_noevent tp MPC and if !defined(CCM_NOEVENT) tp cpp files.

Thu Oct  7 11:39:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
          Regenerated these files with -Gex and pasted the original
          implementation back into the generated files, the destructors of